[package]
name = "time-tz"
version = "0.4.1"
edition = "2021"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
description = "Implementation of tz database (IANA) for time Rust crate."
license = "BSD-3-Clause"
repository = "https://github.com/Yuri6037/time-tz"
readme = "./README.MD"
keywords = ["time", "tz"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.10.1"
time = { version = "0.3.7", features = ["macros"] }
cfg-if = "1.0.0"

#TODO: Put behind crate feature once finished
nom = "7.1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.32.0", features = ["Win32_System_Time", "Win32_Foundation"] }

[build-dependencies]
parse-zoneinfo = { version = "0.3" }
phf_codegen = "0.10.0"
serde-xml-rs = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }

[features]
system = []
