[package]
name = "time-tz"
version = "3.0.0-rc.5.0.0"
edition = "2021"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
description = "Implementation of tz database (IANA) for the time Rust crate."
license = "BSD-3-Clause"
repository = "https://github.com/Yuri6037/time-tz"
readme = "./README.MD"
keywords = ["time", "tz"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11.1"
time = { version = "0.3.7", features = ["macros"] }
cfg-if = "1.0.0"

thiserror = { version = "1.0.30", optional = true }
nom = { version = "7.1.0", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
time = { version = "0.3.7", features = ["macros"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { version = "0.3.64", optional = true }
time = { version = "0.3.7", features = ["macros", "wasm-bindgen"] }
wasm-bindgen = "0.2.87"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.32.0", features = ["Win32_System_Time", "Win32_Foundation"], optional = true }

[build-dependencies]
parse-zoneinfo = { version = "0.3" }
phf_codegen = "0.11.1"
serde-xml-rs = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }

[features]
default = ["db"]
system = ["windows-sys", "js-sys", "thiserror", "db"]
posix-tz = ["nom", "thiserror", "db"]
db = []
db_impl = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
